Fix odd outline for small line-spacing in editable fields

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ p {
   color: #939598;
   font-family: 'Open Sans', sans-serif;
   font-size: 100%;
+  line-height: 1.5;
 }
 
 .card-container {
